# setmore

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-new_feature.yml  03-enhancement.yml
setmore/: __init__.py  streamlit_app.py
setmore/pages/: __init__.py  beer_festival.py  uploader.py
setmore/processor/: __init__.py  beer_festival.py
